fixed padding on small screens

--- a/src/organisms/podcast/_podcast-episodes.scss
+++ b/src/organisms/podcast/_podcast-episodes.scss
@@ -7,7 +7,7 @@
 		justify-content: center;
 		margin-right: 0;
 		margin-left: 0;
-		padding: rhythm(2) rhythm(1);
+		padding: rhythm(2);
 		border-radius: $border-radius;
 		background-color: $color-snow;
 
